--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,6 +1,15 @@
-* {
+*:not(#livePreview *) {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Inter, Sans-Serif;
+  &:root {
+    letter-spacing: -0.015em;
+    font-weight: 500;
+  }
+}
+
+pre,
+pre * {
+  font-family: 'JetBrains Mono', Monospace !important;
 }
