perf: improving performance for playground and so

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -13,3 +13,8 @@ pre,
 pre * {
   font-family: 'JetBrains Mono', Monospace !important;
 }
+
+.nav-default {
+  transition: 300ms;
+  transition-property: left;
+}
