--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,4 +1,4 @@
-*:not(#livePreview *, #code-review *) {
+*:not(#livePreview *, #code-preview *) {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
